syntax = "proto3";

package userpb;

option go_package = "github.com/1001bit/onlinecanvasgames/services/user/pkg/userpb";

service UserService {
    rpc GetUser(GetUserRequest) returns (UserResponse) {}
    rpc RegisterUser(UserInputRequest) returns (UserResponse) {}
    rpc LoginUser(UserInputRequest) returns (UserResponse) {}
}

message GetUserRequest {
    string username = 1;
}

message UserInputRequest {
    string username = 1;
    string password = 2;
}

message UserResponse {
    string username = 1;
    string date = 2;
}